--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "src/index.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node -r esbuild-register ./src/index.ts",
+    "format": "prettier --check \"src/**/*.{js,jsx,ts,tsx}\"",
+    "lint": "eslint ./src"
   },
   "repository": {
     "type": "git",
@@ -15,5 +17,16 @@
   "bugs": {
     "url": "https://github.com/acordiner92/math-gen-ts/issues"
   },
-  "homepage": "https://github.com/acordiner92/math-gen-ts#readme"
+  "homepage": "https://github.com/acordiner92/math-gen-ts#readme",
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^4.23.0",
+    "@typescript-eslint/parser": "^4.23.0",
+    "esbuild-register": "^2.5.0",
+    "eslint": "^7.26.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-fp": "^2.3.0",
+    "eslint-plugin-prettier": "^3.4.0",
+    "prettier": "^2.3.0",
+    "typescript": "^4.2.4"
+  }
 }
