--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
       "esModuleInterop": false,
       "allowSyntheticDefaultImports": true,
       "strict": true,
+      "strictNullChecks": true,
       "forceConsistentCasingInFileNames": true,
       "module": "ESNext",
       "moduleResolution": "Node",
