--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "nodemon",
     "format": "prettier --check \"src/**/*.{js,jsx,ts,tsx}\"",
     "lint": "eslint ./src",
+    "hello": "schemats generate -c postgres://postgres:postgres@localhost:5432/math_gen -o math_gen.ts",
     "db:create": "db-migrate create $NAME -m './db/migrations' --sql-file",
     "db:migrate": "db-migrate up -m './db/migrations' --sql-file"
   },
@@ -21,7 +22,9 @@
   },
   "homepage": "https://github.com/acordiner92/math-gen-ts#readme",
   "devDependencies": {
+    "@types/express": "^4.17.11",
     "@types/pg": "^7.14.11",
+    "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "^4.23.0",
     "@typescript-eslint/parser": "^4.23.0",
     "db-migrate": "^0.11.12",
@@ -31,23 +34,21 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-fp": "^2.3.0",
     "eslint-plugin-prettier": "^3.4.0",
+    "monocle-ts": "^2.0.0",
+    "newtype-ts": "^0.3.2",
     "nodemon": "^2.0.7",
     "prettier": "^2.3.0",
-    "schemats": "^3.0.3",
     "typescript": "^4.2.4"
   },
   "dependencies": {
-    "@marblejs/core": "^3.5.0",
-    "@marblejs/middleware-body": "^3.5.0",
-    "@marblejs/middleware-cors": "^3.5.0",
-    "@marblejs/middleware-io": "^3.5.0",
-    "@marblejs/middleware-logger": "^3.5.0",
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
     "fp-ts": "^2.10.5",
     "io-ts": "^2.2.16",
+    "io-ts-reporters": "^1.2.2",
     "io-ts-types": "^0.5.16",
-    "monocle-ts": "^2.3.10",
-    "newtype-ts": "^0.3.4",
+    "knex": "^0.95.5",
     "pg": "^8.6.0",
-    "rxjs": "^6.5.3"
+    "uuid": "^8.3.2"
   }
 }
