--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
   },
   "homepage": "https://github.com/acordiner92/math-gen-ts#readme",
   "devDependencies": {
-    "@types/express": "^4.17.13",
     "@types/pg": "^7.14.11",
     "@types/uuid": "^8.3.1",
     "@typescript-eslint/eslint-plugin": "^4.28.2",
@@ -41,13 +40,14 @@
     "typescript": "^4.3.5"
   },
   "dependencies": {
-    "body-parser": "^1.19.0",
-    "express": "^4.17.1",
+    "fastify": "^3.18.1",
+    "fastify-funky": "^1.0.2",
     "fp-ts": "^2.10.5",
     "io-ts": "^2.2.16",
     "io-ts-reporters": "^1.2.2",
     "io-ts-types": "^0.5.16",
     "knex": "^0.95.6",
+    "knex-stringcase": "^1.4.5",
     "pg": "^8.6.0",
     "uuid": "^8.3.2"
   }
