--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "nodemon",
     "format": "prettier --check \"src/**/*.{js,jsx,ts,tsx}\"",
-    "lint": "eslint ./src",
+    "lint": "eslint ./src --maxWorkers=50%",
+    "test": "jest src/*",
     "hello": "schemats generate -c postgres://postgres:postgres@localhost:5432/math_gen -o math_gen.ts",
     "db:create": "db-migrate create $NAME -m './db/migrations' --sql-file",
     "db:migrate": "db-migrate up -m './db/migrations' --sql-file"
@@ -22,17 +23,21 @@
   },
   "homepage": "https://github.com/acordiner92/math-gen-ts#readme",
   "devDependencies": {
+    "@types/jest": "^26.0.24",
     "@types/pg": "^7.14.11",
     "@types/uuid": "^8.3.1",
     "@typescript-eslint/eslint-plugin": "^4.28.2",
     "@typescript-eslint/parser": "^4.28.2",
     "db-migrate": "^0.11.12",
     "db-migrate-pg": "^1.2.2",
+    "esbuild": "^0.12.15",
+    "esbuild-jest": "^0.5.0",
     "esbuild-register": "^2.6.0",
     "eslint": "^7.30.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-fp": "^2.3.0",
     "eslint-plugin-prettier": "^3.4.0",
+    "jest": "^27.0.6",
     "monocle-ts": "^2.3.10",
     "newtype-ts": "^0.3.4",
     "nodemon": "^2.0.9",
