Finish added unit tests for topic.domain

--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
   },
   "homepage": "https://github.com/acordiner92/math-gen-ts#readme",
   "devDependencies": {
+    "@types/faker": "^5.5.7",
     "@types/jest": "^26.0.24",
     "@types/pg": "^7.14.11",
     "@types/uuid": "^8.3.1",
     "@typescript-eslint/eslint-plugin": "^4.28.2",
     "@typescript-eslint/parser": "^4.28.2",
+    "callsites": "^3.1.0",
     "db-migrate": "^0.11.12",
     "db-migrate-pg": "^1.2.2",
     "esbuild": "^0.12.15",
@@ -37,6 +39,8 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-fp": "^2.3.0",
     "eslint-plugin-prettier": "^3.4.0",
+    "factory.ts": "^0.5.2",
+    "faker": "^5.5.3",
     "jest": "^27.0.6",
     "monocle-ts": "^2.3.10",
     "newtype-ts": "^0.3.4",
