--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,5 +15,5 @@
       "isolatedModules": true,
       "noEmit": true
     },
-    "include": ["./src", "./types"]
+    "include": ["./src", "./types", "./test"]
   }
