--- a/.eslintrc
+++ b/.eslintrc
@@ -1,10 +1,9 @@
 
 {
-    "parser": "@typescript-eslint/parser", // Specifies the ESLint parser
+    "parser": "@typescript-eslint/parser",
     "parserOptions": {
-      "ecmaVersion": 2021, // Allows for the parsing of modern ECMAScript features
+      "ecmaVersion": 2021,
       "sourceType": "module",
-      // Allows for the use of imports
       "project": ["./tsconfig.json"]
     },
     "plugins": ["fp"],
