Finished adding integration tests for topic

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,5 +15,5 @@
       "isolatedModules": true,
       "noEmit": true
     },
-    "include": ["./src", "./types", "./test"]
+    "include": ["./src", "./types", "./test", "./db/migrations"]
   }
