--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "start": "nodemon",
     "format": "prettier --check \"src/**/*.{js,jsx,ts,tsx}\"",
     "lint": "eslint ./src --maxWorkers=50%",
-    "test": "jest src/*",
+    "test": "npm run test:unit & npm run test:int",
+    "test:unit": "jest src/**/*.unit.test.ts",
+    "test:int": "jest src/**/*.int.test.ts",
     "hello": "schemats generate -c postgres://postgres:postgres@localhost:5432/math_gen -o math_gen.ts",
-    "db:create": "db-migrate create $NAME -m './db/migrations' --sql-file",
+    "db:create": "knex migrate:make --migrations-directory ./db/migrations -x ts --",
     "db:migrate": "db-migrate up -m './db/migrations' --sql-file"
   },
   "repository": {
@@ -42,10 +44,12 @@
     "factory.ts": "^0.5.2",
     "faker": "^5.5.3",
     "jest": "^27.0.6",
+    "knex-cleaner": "^1.3.1",
     "monocle-ts": "^2.3.10",
     "newtype-ts": "^0.3.4",
     "nodemon": "^2.0.9",
     "prettier": "^2.3.2",
+    "sqlite3": "^5.0.2",
     "typescript": "^4.3.5"
   },
   "dependencies": {
@@ -57,6 +61,7 @@
     "io-ts-types": "^0.5.16",
     "knex": "^0.95.6",
     "knex-stringcase": "^1.4.5",
+    "pattern-matching-ts": "^2.0.0",
     "pg": "^8.6.0",
     "uuid": "^8.3.2"
   }
